autotests/integration: add test for fractional scaling glitches

In my own testing (vs. 6.4) the actual bug is already fixed. This test just
makes sure it stays that way

BUG: 509165


(cherry picked from commit 449c4d53b5327aeaa022be168b4cf43a50294946)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>